# adt

./: Cargo.toml  README.md
.github/workflows/: release.yml
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: context.rs  error.rs  lib.rs  utils.rs
crates/providers/: Cargo.toml
crates/providers/src/: deltatable.rs  error.rs  lib.rs  listing.rs
src/: deltalake.rs
