# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace.package]
authors = ["Aolwas <maxime.cottret@gmail.com>"]
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/aolwas/adt"
rust-version = "1.85.0"
version = "2.0.2"

[workspace]
resolver = "2"
members = ["crates/core", "crates/cli", "crates/providers"]


[workspace.dependencies]
chrono = { version = "0.4" }
url = { version = "2.3" }
log = { version = "0.4" }
snafu = { version = "0.8.5" }

# sql dependencies
arrow = { version = ">=55,<56", default-features = false }
datafusion = { version = ">=48,<49", default-features = false }
object_store = { version = ">=0.12,<0.13", default-features = false }

# runtime
tokio = { version = "^1.0", default-features = false }
futures = { version = "0.3" }
async-trait = { version = "0.1.81" }
