[package]
name = "adt"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
adt-delta = ["adt-core/adt-delta"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
minus = { version = "5.6.1" }
simple_logger = { version = "5.0" }
log = { workspace = true }
snafu = { workspace = true }
arrow = { workspace = true, features = ["prettyprint"] }
datafusion = { workspace = true }
tokio = { workspace = true, features = ["full"] }
minijinja = { version = "2.7.0" }
adt-core = { path = "../core" }
