[package]
name = "adt-providers"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[features]
default = ["listing"]
delta = ["dep:delta_kernel"]
listing = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = { workspace = true }
log = { workspace = true }
snafu = { workspace = true }
arrow = { workspace = true }
datafusion = { workspace = true }
object_store = { workspace = true }
async-trait = { workspace = true }
delta_kernel = { version = ">=0.13, <0.14", features = [
    "default-engine-rustls",
    "arrow-55",
], optional = true }
